# prismhr-mcp

./: .codex-audit-allow  .env.example  .gitignore  LICENSE  README.md  WIKI.md  conftest.py  pyproject.toml  server.json
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/workflows/: pii-scan.yml  publish.yml  test.yml
.planning/: assistants-roadmap.md  carrier-map.md  pii-unmasking.md  portal-tier.md  prismhr-api-map.md  prismhr-methods-full.json  prismhr-methods.json  probe-summary.json  verification-matrix-public.json  workflow-catalog.md
.planning/map/: README.md  applicant.md  benefits.md  clientMaster.md  codeFiles.md  deductions.md  documentService.md  employee.md  generalLedger.md  humanResources.md  login.md  newHire.md  payroll.md  prismSecurity.md  signOn.md  subscription.md  system.md  taxRate.md  timesheet.md
.planning/probe-responses/: payroll_getBulkYearToDateValues.json  payroll_getPayrollScheduleCodes.json
commercial/: LICENSE  README.md
commercial/simploy/: __init__.py
docs/: AUDIT_REGISTER.md  PUBLISHING.md
scripts/: _pii_message_callback.py  _read_vertex.py  audit_uat_coverage.py  build_cto_pdf.py  build_field_index.py  calibrated_probe.py  corpus_multi_period.py  dogfood_aca_integrity.py  dogfood_all_readers.py  dogfood_benefits_deduction_audit.py  dogfood_billing_wash.py  dogfood_new_hire_audit.py  dogfood_payroll_batch_health.py  dogfood_retirement_match.py  dogfood_tax_engine.py  dogfood_voucher_classification.py  dogfood_voucher_classification_probe.py  dogfood_w2_distribution.py  dogfood_ytd_reconciliation.py  encrypt_env.py  extract_bible_v2.py  extract_full_bible.py  generate_api_map.py  install_hooks.sh  multi_client_dogfood.py  probe_employee_classification_fields.py  probe_fixtures_pass.py  probe_get_data.py  probe_getdata_dimensions.py  probe_init_batch.py  probe_tuple_pass.py  probe_uat_gets.py  probe_wide_pass.py  refresh_oh_muni.py  refresh_pa_eit.py  request_permissions.py  sanitize_verification.py  scan_pii.py  scan_tax_jurisdictions.py  sweep_fica_exempt_misflags.py  (+3 more)
src/prismhr_mcp/: __init__.py  __main__.py  config.py  errors.py  registry.py  runtime.py  secure_env.py  server.py
tests/: conftest.py  test_about.py  test_catalog.py  test_config.py  test_normalizers_payroll.py  test_onepassword.py  test_permissions.py  test_prismhr_client.py  test_prismhr_session.py  test_registry.py  test_tools_catalog.py  test_tools_client.py  test_tools_meta.py  test_tools_payroll.py
tests/commercial/: test_1095c_consistency.py  test_aca_integrity.py  test_benefits_deduction_audit.py  test_billing_payroll_recon.py  test_billing_wash_audit.py  test_bonus_gross_up_audit.py  test_catalog_calc.py  test_client_golive.py  test_cobra_sweep.py  test_final_paycheck_compliance.py  test_form_1099_nec_preflight.py  test_garnishment_history.py  test_guardian_834.py  test_imputed_income_audit.py  test_intacct_adapter.py  test_new_hire_audit.py  test_off_cycle_payroll_audit.py  test_orchestration_packs.py  test_pack_tools.py  test_payroll_batch_health.py  test_payroll_compliance.py  test_payroll_gl_recon.py  test_payroll_journal_preflight.py  test_payroll_normalizers.py  test_plan_deduction_map.py  test_prior_peo_conversion.py  test_reciprocal_withholding.py  (+19 more)
(+148 files in other folders)
