[project]
name = "prismhr-mcp"
version = "0.1.0"
description = "PrismHR MCP Server — PEO workflow tools + Microsoft 365 connectors for Claude"
authors = [{ name = "Nihar Kulkarni", email = "nihar@simploy.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.27,<2.0",
    "pydantic>=2.8,<3.0",
    "httpx>=0.27,<0.29",
    "aiosqlite>=0.20",
    "msal>=1.31",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "weasyprint>=62.3",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
prismhr-mcp = "prismhr_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
