[project]
name = "prismhr-mcp"
version = "0.1.0.dev28"
description = "Open-source Model Context Protocol server for PrismHR — PEO workflow tools + Microsoft 365 connectors for Claude and other MCP-aware agents."
authors = [{ name = "Nihar Kulkarni", email = "nihar@simploy.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
keywords = ["mcp", "model-context-protocol", "prismhr", "prismhr-api", "peo", "payroll", "payroll-automation", "hr", "hris", "benefits", "benefits-enrollment", "834-edi", "401k", "claude", "anthropic", "cursor", "agentic", "ai-agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.27,<2.0",
    "pydantic>=2.8,<3.0",
    "httpx>=0.27,<0.29",
    "aiosqlite>=0.20",
    "msal>=1.31",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "weasyprint>=62.3",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://github.com/nikulk2992-jpg/prismhr-mcp"
Repository = "https://github.com/nikulk2992-jpg/prismhr-mcp"
Issues = "https://github.com/nikulk2992-jpg/prismhr-mcp/issues"
License = "https://github.com/nikulk2992-jpg/prismhr-mcp/blob/main/LICENSE"
"Commercial Support" = "https://github.com/nikulk2992-jpg/prismhr-mcp#commercial-support"

[project.scripts]
prismhr-mcp = "prismhr_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Include bundled catalog data so installs can read the bible + verification
# matrix via importlib.resources without copying files at install time.
source-include = ["src/prismhr_mcp/data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
